# TITAN-API

./: .env.template  .gitignore  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
tests/: test_api.py  test_api_workflow.py  test_parse_workflow.py
titan/: __init__.py  __main__.py  app.py  auth.py  config.py  database.py  logger.py  manager.py  security.py
titan/models/: user.py  workflow.py
titan/routes/v2/: semantic.py  user.py  workflow.py
titan/routes/v3/: workflow.py
titan/semantic/: bigowl.py  repository.py
